fix preview zine styles on mobile landscape mode

--- a/client/src/components/ItemDetail/styles.scss
+++ b/client/src/components/ItemDetail/styles.scss
@@ -15,17 +15,17 @@
   }
   &__info {
     font-size: 1.4rem;
-    font-weight: 400;
+    font-weight: 300;
     height: 30vh;
     margin: 0 auto;
     width: 100%;
     text-align: center;
+    text-transform: capitalize;
   }
 
   &__text {
     letter-spacing: var(--letter-spacing-md);
     margin: 0.5rem 0;
-    text-transform: capitalize;
     width: 100%;
   }
 
@@ -45,7 +45,6 @@
   @media (min-width: 600px) {
     flex-direction: unset;
     align-items: center;
-
     height: 55rem;
     margin-top: unset;
     &__img {
