--- a/client/src/components/PrintItem/item-attrs.scss
+++ b/client/src/components/PrintItem/item-attrs.scss
@@ -18,8 +18,8 @@
     border: 1px solid var(--color-grey);
     background-color: transparent;
     color: var(--color-dark-grey);
-    height: 4rem;
-    line-height: 4rem;
+    height: 5rem;
+    line-height: 5rem;
     margin: var(--margin-sm) 0;
     cursor: pointer;
 
@@ -65,8 +65,9 @@
       }
     }
     &__btn {
-      margin-top: 5rem;
+      border-color: var(--color-white);
       color: var(--color-white);
+      margin-top: 5rem;
       transform: translateY(2.8rem);
 
       &:hover {
